Java 5 Use auto-boxing or Double.valueOf for primary to Object conversion
git-svn-id: https://scm.mmbase.org/mmbase/trunk@22635 91430c5f-d668-0410-9e7d-dd663366dcfd